# ChangeLog for dev-perl/CDDB_get
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/CDDB_get/ChangeLog,v 1.10 2003/07/12 10:49:57 aliz Exp $

  07 Jun 2003; <rac@gentoo.org> CDDB_get-2.10-r2.ebuild:
  Add IUSE

*CDDB_get-2.2 (31 May 2003)

  31 May 2003; Michael Cummings <mcummings@gentoo.org> CDDB_get-2.2.ebuild:
  Version bump from CPAN

*CDDB_get-2.10-r2 (21 Jun 2003)
 
  12 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.

*CDDB_get-1.66-r2 (31 May 2003)

  31 May 2003; <rac@gentoo.org> CDDB_get-1.66-r1.ebuild,
  CDDB_get-1.66-r2.ebuild, CDDB_get-2.10-r1.ebuild, CDDB_get-2.10-r2.ebuild:
  Clean old versions, as 2.10-r2 is marked stable on every arch mentioned in any
  older ebuild versions. Also eliminating duplicate SLOT definition. Thanks to
  mcummings for finding this.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 

*CDDB_get-1.66-r1, CDDB_get-2.10-r1 (5 May 2002)

  30 Jul 2002; Calum Selkirk <cselkirk@gentoo.org> CDDB_get-2.10-r1.ebuild :

  Added ppc to KEYWORDS.

  5 May 2002; Seemant Kulleen <seemant@gentoo.org>
  CDDB_get-{1.66,2.10}-r1.ebuild files/digest-CDDB_get-{1.66,2,10}-r1 :

  Converted to using the perl-module.eclass

*CDDB_get-1.66,2.10 (7 Apr 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.