@@ -1,6 +1,8 @@
-MD5 f1888728cffd3226f67ba1da03b847ed CDDB_get-2.2.ebuild 497
-MD5 d305fa9b6c59528e34b53abd4d8d3c05 CDDB_get-2.10-r2.ebuild 485
-MD5 68906b510c42fec15dc48e8d8afa44b0 ChangeLog 1762
+MD5 80a87fe2a192499f90d6f5c52403412d CDDB_get-2.23.ebuild 499
 MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
-MD5 6d44d5c90ee0ccc761289b0ae7c3083c files/digest-CDDB_get-2.2 63
+MD5 f1888728cffd3226f67ba1da03b847ed CDDB_get-2.2.ebuild 497
+MD5 965616cfc9c791fdd2eebd2a92310a26 ChangeLog 1899
+MD5 d305fa9b6c59528e34b53abd4d8d3c05 CDDB_get-2.10-r2.ebuild 485
 MD5 af86cf36238d7d49fcf69a1cff394ddb files/digest-CDDB_get-2.10-r2 64
+MD5 6d44d5c90ee0ccc761289b0ae7c3083c files/digest-CDDB_get-2.2 63
+MD5 d0603657ddc88afef40017ccbda582c8 files/digest-CDDB_get-2.23 64
