@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/CDDB_get
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/CDDB_get/ChangeLog,v 1.10 2003/07/12 10:49:57 aliz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/CDDB_get/ChangeLog,v 1.11 2004/01/03 12:07:29 mholzer Exp $
+
+*CDDB_get-2.23 (03 Jan 2004)
+
+  03 Jan 2004; Martin Holzer <mholzer@gentoo.org> CDDB_get-2.23.ebuild:
+  Version bumped. Closes 36518
 
   07 Jun 2003; <rac@gentoo.org> CDDB_get-2.10-r2.ebuild:
   Add IUSE
